--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@nrwl/js": "15.9.2",
     "@nrwl/linter": "15.9.2",
     "@nrwl/nx-plugin": "^15.9.2",
+    "@nrwl/react": "^15.9.2",
     "@nrwl/workspace": "15.9.2",
+    "@size-limit/preset-app": "^8.2.4",
     "@swc-node/register": "^1.4.2",
     "@swc/cli": "~0.1.55",
     "@swc/core": "^1.2.173",
@@ -25,7 +27,9 @@
     "jest-environment-jsdom": "^29.4.1",
     "jsonc-eslint-parser": "^2.1.0",
     "nx": "15.9.2",
+    "nx-size-limit": "^0.0.2",
     "prettier": "^2.6.2",
+    "size-limit": "^8.2.4",
     "ts-jest": "^29.0.5",
     "ts-node": "10.9.1",
     "typescript": "~4.9.5"
