--- a/packages/nx-size-limit/project.json
+++ b/packages/nx-size-limit/project.json
@@ -61,6 +61,9 @@
           "codeCoverage": true
         }
       }
+    },
+    "release": {
+      "executor": "@theunderscorer/nx-semantic-release:semantic-release"
     }
   },
   "tags": []
