feat #9 added missing options more tests and a ci check

--- a/packages/nx-size-limit/project.json
+++ b/packages/nx-size-limit/project.json
@@ -64,6 +64,9 @@
     },
     "release": {
       "executor": "@theunderscorer/nx-semantic-release:semantic-release"
+    },
+    "size-limit": {
+      "executor": "nx-size-limit:size-limit"
     }
   },
   "tags": []
