--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,6 +66,19 @@ jobs:
 
       - run: npx nx affected --target=build --base=origin/main
 
+      - name: Get list of affected apps
+        run: |
+         APPS=( $(ls -1d dist/packages/*/) )
+         echo "APPS=$APPS" >> $GITHUB_ENV
+
+       - name: Run NX command per app
+         env:
+           APPS: ${{ env.APPS }}
+         run: |
+           for app in $APPS; do
+             npx nx run $app:size-limit
+           done
+
   test-affected:
       name: Run unit tests on affetced projects
       needs: planning-job
