--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,6 +66,17 @@ jobs:
 
       - run: npx nx affected --target=build --base=origin/main
 
+      - run: |
+         APPS=( $(ls -1d dist/packages/*/ | xargs -n 1 basename) )
+         echo "APPS=$APPS" >> $GITHUB_ENV
+
+        env:
+           APPS: ${{ env.APPS }}
+      - run: |
+           for app in $APPS; do
+             npx nx run $app:size-limit
+           done
+
   test-affected:
       name: Run unit tests on affetced projects
       needs: planning-job
