--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,15 +67,17 @@ jobs:
       - run: npx nx affected --target=build --base=origin/main
 
       - run: |
-         APPS=( $(ls -1d dist/packages/*/ | xargs -n 1 basename) )
-         echo "APPS=$APPS" >> $GITHUB_ENV
+          APPS=( $(ls -1d dist/packages/*/ | xargs -n 1 basename) )
+          echo "APPS=$APPS" >> $GITHUB_ENV
 
         env:
-           APPS: ${{ env.APPS }}
-      - run: |
-           for app in $APPS; do
-             npx nx run $app:size-limit
-           done
+          APPS: ${{ env.APPS }}
+
+      - name: Run size-limit check for each app
+        run: |
+          for app in $APPS; do
+            npx nx run $app:size-limit || (echo "::error::Size limit check failed for app $app" && echo "::warning::Size limit check failed for app $app. See the build logs for more details.")
+          done
 
   test-affected:
       name: Run unit tests on affetced projects
