--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,10 +74,60 @@ jobs:
           APPS: ${{ env.APPS }}
 
       - name: Run size-limit check for each app
+        id: size-limit
         run: |
           for app in $APPS; do
-            npx nx run $app:size-limit || (echo "::error::Size limit check failed for app $app" && echo "::warning::Size limit check failed for app $app. See the build logs for more details.")
+            npx nx run $app:size-limit || (echo "::error::Size limit check failed for app $app" && echo "::warning::Size limit check failed for app $app. See the build logs for more details." && echo "SIZE-LIMIT-OUTPUT-BEGIN" && npx nx run $app:size-limit -- --json || true && echo "SIZE-LIMIT-OUTPUT-END")
           done
+        env:
+          APPS: ${{ env.APPS }}
+
+      - name: Create size limit comment
+        if: steps.size-limit.outcome == 'failure'
+        uses: actions/github-script@v5
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const failedApps = [];
+            let output = '';
+
+            // Collect failed apps and their size limit output
+            const lines = steps.size-limit.outputs.stdout.trim().split('\n');
+            let i = 0;
+            while (i < lines.length) {
+              const line = lines[i];
+              if (line.startsWith('SIZE-LIMIT-OUTPUT-BEGIN')) {
+                const app = line.split(' ')[1];
+                const sizeLimitOutput = [];
+                i++;
+                while (i < lines.length && !lines[i].startsWith('SIZE-LIMIT-OUTPUT-END')) {
+                  sizeLimitOutput.push(lines[i]);
+                  i++;
+                }
+                if (sizeLimitOutput.length > 0) {
+                  failedApps.push(app);
+                  output += `
+                    ${app}:
+                    ${sizeLimitOutput.join('\n')}
+                  `;
+                }
+              } else {
+                i++;
+              }
+            }
+
+            // Create comment
+            const prNumber = context.payload.pull_request.number;
+            const comment = `
+              The following size limit check(s) failed:
+
+              ${output}
+            `;
+            await github.issues.createComment({
+              issue_number: prNumber,
+              body: comment
+            });
+
 
   test-affected:
       name: Run unit tests on affetced projects
