--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,7 +77,7 @@ jobs:
         id: size-limit
         run: |
           for app in $APPS; do
-            npx nx run $app:size-limit || (echo "::error::Size limit check failed for app $app" && echo "::warning::Size limit check failed for app $app. See the build logs for more details." && echo "SIZE-LIMIT-OUTPUT-BEGIN" && npx nx run $app:size-limit -- --json || true && echo "SIZE-LIMIT-OUTPUT-END")
+            npx nx run $app:size-limit > ${app}_size_limit.json || (echo "::error::Size limit check failed for app $app" && echo "::warning::Size limit check failed for app $app. See the build logs for more details.")
           done
         env:
           APPS: ${{ env.APPS }}
@@ -96,23 +96,25 @@ jobs:
             let i = 0;
             while (i < lines.length) {
               const line = lines[i];
-              if (line.startsWith('SIZE-LIMIT-OUTPUT-BEGIN')) {
-                const app = line.split(' ')[1];
-                const sizeLimitOutput = [];
+              if (line.startsWith('::error::Size limit check failed for app')) {
+                const app = line.split(' ')[6];
+                failedApps.push(app);
                 i++;
-                while (i < lines.length && !lines[i].startsWith('SIZE-LIMIT-OUTPUT-END')) {
-                  sizeLimitOutput.push(lines[i]);
-                  i++;
-                }
-                if (sizeLimitOutput.length > 0) {
-                  failedApps.push(app);
-                  output += `
-                    ${app}:
-                    ${sizeLimitOutput.join('\n')}
-                  `;
-                }
               } else {
                 i++;
+              }
+            }
+
+            // Read size limit output files for failed apps
+            for (const app of failedApps) {
+              try {
+                const sizeLimitOutput = require(`./${app}_size_limit.json`);
+                output += `
+                  ${app}:
+                  ${JSON.stringify(sizeLimitOutput, null, 2)}
+                `;
+              } catch (error) {
+                console.log(`Failed to read size limit output file for app ${app}: ${error}`);
               }
             }
 
