--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@size-limit/preset-app": "^8.2.4",
     "@swc-node/register": "^1.4.2",
     "@swc/cli": "~0.1.55",
-    "@swc/core": "^1.2.173",
+    "@swc/core": "^1.3.53",
     "@theunderscorer/nx-semantic-release": "^2.3.0",
     "@types/jest": "^29.4.0",
     "@types/node": "16.11.7",
@@ -30,7 +30,7 @@
     "jest-environment-jsdom": "^29.4.1",
     "jsonc-eslint-parser": "^2.1.0",
     "nx": "15.9.2",
-    "nx-size-limit": "^1.0.0",
+    "nx-size-limit": "2.0.0",
     "prettier": "^2.6.2",
     "size-limit": "^8.2.4",
     "ts-jest": "^29.0.5",
@@ -38,8 +38,11 @@
     "typescript": "~4.9.5"
   },
   "dependencies": {
-    "@swc/helpers": "~0.4.11",
+    "@swc/helpers": "^0.5.0",
     "ts-pattern": "^4.2.2",
     "tslib": "^2.3.0"
+  },
+  "volta": {
+    "node": "16.10.0"
   }
 }
