--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,15 +1,15 @@
-name: release
+name: Release
 
 on:
-  workflow_dispatch:
+  - workflow_dispatch
 
 jobs:
-  release:
-    name: Build & Release
+  build:
+    name: Build before release
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Install dependencies
         run: npm ci
@@ -19,7 +19,15 @@ jobs:
       - name: Build
         run: npx nx run nx-size-limit:build
 
+
+  release:
+    runs-on: ubuntu-latest
+
+    if: github.ref == 'refs/heads/main'
+
+    steps:
       - name: Release
-        run: npx nx run nx-size-limit:release
-        env:
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+        uses: ./.github/actions/release
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          npm_token: ${{ secrets.NPM_TOKEN }}
