--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,9 +21,10 @@ jobs:
 
 
   release:
+    name: Release after build
     runs-on: ubuntu-latest
-
     if: github.ref == 'refs/heads/main'
+    needs: build
 
     steps:
       - name: Checkout code
