--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,9 +4,9 @@ on:
   - workflow_dispatch
 
 jobs:
-  build:
-    name: Build before release
-    runs-on: ubuntu-latest
+  release:
+    name: Build + Release
+    if: github.ref == 'refs/heads/main'
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -19,18 +19,6 @@ jobs:
       - name: Build
         run: npx nx run nx-size-limit:build
 
-
-  release:
-    name: Release after build
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
-    needs: build
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
       - name: Release
         uses: ./.github/actions/release
         with:
