--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,6 @@ jobs:
         run: npx nx run nx-size-limit:build
 
       - name: Release
-        uses: ./.github/actions/release
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          npm_token: ${{ secrets.NPM_TOKEN }}
+        env:
+          NPM_TOKEN: ${{secrets.NPM_TOKEN}}
+        run: cd dist/packages/nx-size-limit && npm publish
