fix(*): specified @nrwl/devkit dependency

--- a/packages/nx-size-limit/package.json
+++ b/packages/nx-size-limit/package.json
@@ -13,6 +13,12 @@
   "bugs": {
     "url": "git://github.com/LironHazan/nx-size-limit/issues"
   },
+  "peerDependencies": {
+    "nx": ">=15.9.2"
+  },
+  "dependencies": {
+    "@nrwl/devkit": "15.9.2"
+  },
   "repository": {
     "directory": "packages/nx-size-limit",
     "type": "git",
