fix(*): specified @nrwl/devkit dependency (#34)
* fix(*): specified @nrwl/devkit dependency

* fix(*): bumped up the version

---------

Co-authored-by: lironhazan <liron.h@talon-sec.com>

--- a/packages/nx-size-limit/package.json
+++ b/packages/nx-size-limit/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nx-size-limit",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "main": "src/index.js",
   "generators": "./generators.json",
   "executors": "./executors.json",
@@ -12,6 +12,12 @@
   ],
   "bugs": {
     "url": "git://github.com/LironHazan/nx-size-limit/issues"
+  },
+  "peerDependencies": {
+    "nx": ">=15.9.2"
+  },
+  "dependencies": {
+    "@nrwl/devkit": "15.9.2"
   },
   "repository": {
     "directory": "packages/nx-size-limit",
